@@ -11,6 +11,7 @@ v0.5dev (ongoing development)
  * Fix build if compiled with --enable-permissive-menu-goto (#3599609)
  * glcd driver: Add direct support for framebuffer with paged memory layout
  + hd44780: Added 'raspberrypi' connection type (P. Corner)
+ * Build system: Rename configure.in to configure.ac
 
 v0.5.6
  - Remove deprecated CFontz633 driver. Use CFontzPacket with Model=633 instead!
